DAOS-5914 control: Add prototype Go bindings for telemetry
Access engine telemetry from the Go side and re-export it in
a format consumable by Prometheus.

In order to enable the Prometheus exporter, add the following
config entry to daos_server.yml:
telemetry_port: 9191

Prometheus-consumable metrics will then be available at
$server:9191/metrics and can be viewed directly via a
browser or curl.

Run `dmg --allow-proxy telemetry run` to automatically
download and configure Prometheus for the servers in
your daos_control.yml hostlist.

Co-authored-by: Joel Rosenzweig <joel.b.rosenzweig@intel.com>
Signed-off-by: Michael MacDonald <mjmac.macdonald@intel.com>

--- a/doc/man/man8/dmg.8
+++ b/doc/man/man8/dmg.8
@@ -1,4 +1,4 @@
-.TH dmg 1 "15 February 2021"
+.TH dmg 1 "25 February 2021"
 .SH NAME
 dmg \- Administrative tool for managing DAOS clusters
 .SH SYNOPSIS
@@ -593,5 +593,23 @@ Hostlist representing hosts whose managed ranks are to be operated on
 .TP
 \fB\fB\-\-force\fR\fP
 Force stop DAOS system members
+.SS telemetry
+Perform telemetry operations
+.SS telemetry config
+Configure telemetry
+
+\fBUsage\fP: telemetry config [config-OPTIONS]
+.TP
+.TP
+\fB\fB\-f\fR, \fB\-\-for\fR <default: \fI"prometheus"\fR>\fP
+Telemetry system to configure
+.SS telemetry run
+Launch telemetry system
+
+\fBUsage\fP: telemetry run [run-OPTIONS]
+.TP
+.TP
+\fB\fB\-f\fR, \fB\-\-for\fR <default: \fI"prometheus"\fR>\fP
+Telemetry system to configure
 .SS version
 Print dmg version
